--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.2
   lottie: ^2.2.0
+  provider: ^6.0.0
 
 dev_dependencies:
   flutter_test:
@@ -21,6 +22,7 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   assets:
+    - assets/aac_data.json
     - assets/animation.json
     - assets/3d_image.png
     - assets/bookstore.png
