--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   lottie: ^2.2.0
   provider: ^6.0.0
+  auto_size_text: ^3.0.0
 
 dev_dependencies:
   flutter_test:
