--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
   lottie: ^2.2.0
   provider: ^6.0.0
   auto_size_text: ^3.0.0
+  speech_to_text: ^6.6.1
+  permission_handler: ^10.2.0
 
 dev_dependencies:
   flutter_test:
