--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.2
+  get: ^4.3.8
   lottie: ^2.2.0
   provider: ^6.0.0
   auto_size_text: ^3.0.0
